--- a/results.html
+++ b/results.html
@@ -31,55 +31,41 @@
     </script>
     <style>
         .tooltip { position: relative; display: inline-block; } .tooltip .tooltiptext { visibility: hidden; width: 80px; background-color: #555; color: #fff; text-align: center; border-radius: 6px; padding: 5px 0; position: absolute; z-index: 1; bottom: 125%; left: 50%; margin-left: -40px; opacity: 0; transition: opacity 0.3s; } .tooltip .tooltiptext::after { content: ""; position: absolute; top: 100%; left: 50%; margin-left: -5px; border-width: 5px; border-style: solid; border-color: #555 transparent transparent transparent; } .tooltip:hover .tooltiptext { visibility: visible; opacity: 1; }
-        .swiper-container.main-swiper { width: 100%; }
+        .swiper-container.main-swiper { width: 100%; position: relative; /* Needed for absolute pagination */ }
         .swiper-slide { height: auto; display: flex; flex-direction: column; }
         .swiper-slide img { display: block; width: 100%; height: auto; object-fit: contain; max-height: 80vh; }
         .swiper-slide.share-image-slide img { max-height: none; object-fit: contain; }
         .swiper-button-next, .swiper-button-prev { color: #fff; background-color: rgba(0,0,0,0.3); padding: 10px; border-radius: 50%; width: 40px; height: 40px; } .swiper-button-next::after, .swiper-button-prev::after { font-size: 1.2rem; }
-        /* **MODIFIED**: Pagination Styles */
+
+        /* **MODIFIED**: Pagination Styles based on user code */
         .swiper-pagination {
-            position: absolute; /* Keep absolute positioning */
-            bottom: 10px; /* Adjust vertical position */
+            position: absolute;
+            bottom: 20px !important; /* Positioned near the bottom black bar */
             left: 50%;
             transform: translateX(-50%);
-            width: auto; /* Allow width to fit content */
-            z-index: 10; /* Ensure it's above image */
+            width: auto;
+            z-index: 10;
         }
-        .swiper-pagination-bullet {
-            background-color: rgba(255, 255, 255, 0.7); /* Lighter bullet color */
-            opacity: 1;
-            width: 8px;
-            height: 8px;
-        }
-        .swiper-pagination-bullet-active { background: #4f46e5; }
+        .swiper-pagination-bullet { background-color: rgba(128, 128, 128, 0.7); /* Grey bullets */ opacity: 1; width: 8px; height: 8px; }
+        .swiper-pagination-bullet-active { background: #FFFFFF; } /* White active bullet */
 
         .thumbnail-swiper .swiper-slide { width: 60px !important; height: 80px; opacity: 0.6; cursor: pointer; border: 2px solid transparent; transition: opacity 0.3s, border-color 0.3s; }
         .thumbnail-swiper .swiper-slide img { object-fit: cover; }
         .thumbnail-swiper .swiper-slide-thumb-active { opacity: 1; border-color: #4f46e5; } .thumbnail-swiper { margin-top: 0.5rem; padding: 5px 0; }
         #narrative-summary-container, #cigar-review-container, #selected-flavors-container { max-width: 100%; }
         .flavor-tag { display: inline-block; background-color: #e5e7eb; color: #374151; font-size: 0.75rem; font-weight: 600; margin-right: 0.5rem; margin-bottom: 0.5rem; padding: 0.125rem 0.625rem; border-radius: 9999px; }
+
+        /* **MODIFIED**: Share Card Styles based on user code */
         #share-card-container { position: absolute; left: -9999px; top: 0; width: 350px; background-color: white; border-radius: 0.5rem; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); overflow: hidden; border: 1px solid #e5e7eb; visibility: hidden; z-index: -1; }
-        #share-card-image-wrapper { height: calc(350px * 1572 / 1179); background-color: #e5e7eb; display: flex; align-items: center; justify-content: center; }
+        #share-card-image-wrapper { background-color: #e5e7eb; display: flex; align-items: center; justify-content: center; aspect-ratio: 1179 / 1572; /* Use aspect-ratio */ }
         #share-card-image { width: 100%; height: 100%; object-fit: cover; }
         #share-card-content { padding: 0.75rem; position: relative; }
-        /* **MODIFIED**: Score/Grade Layout */
-        #share-card-score-grade {
-            display: flex; /* Use flexbox */
-            align-items: flex-start; /* Align items to the top */
-            justify-content: space-between; /* Space between score/grade and QR code */
-            margin-bottom: 0.5rem;
-        }
-        #share-card-score-wrapper { /* New wrapper for score and grade */
-            display: flex;
-            flex-direction: column; /* Stack score and grade */
-        }
-        #share-card-score { font-size: 2.5rem; font-weight: 900; line-height: 1; /* Removed margin-bottom */ }
-        #share-card-grade { text-align: left; /* Align grade text left */ margin-top: 0.1rem; /* Add small space above grade */ }
-        #share-card-grade-badge { display: inline-block; padding: 0.125rem 0.5rem; border-radius: 9999px; font-size: 0.7rem; font-weight: 600; line-height: 1.1; }
-        /* Watermark and QR positioning adjusted */
-        #share-card-bottom-row { display: flex; justify-content: space-between; align-items: flex-end; /* Align watermark text and QR code to bottom */ margin-top: 0.5rem; }
-        #share-card-watermark { font-size: 0.65rem; color: #9ca3af; line-height: 1.2; padding-right: 0.5rem; /* Add padding to prevent overlap */ flex-grow: 1; /* Allow watermark to take available space */ }
-        #share-card-qrcode { position: relative; /* Change from absolute to relative */ bottom: 0; right: 0; width: 28%; height: auto; background-color: white; padding: 2px; border: 1px solid #eee; box-shadow: 0 0 3px rgba(0,0,0,0.1); flex-shrink: 0; /* Prevent QR code from shrinking */ }
+        #share-card-score-grade { display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 0.5rem; }
+        #share-card-score { font-size: 3rem; font-weight: 900; line-height: 1; margin-bottom: 0.3rem; }
+        #share-card-grade-badge { display: inline-block; padding: 0.2rem 0.5rem; border-radius: 9999px; font-size: 0.75rem; font-weight: 600; }
+        .share-card-footer { display: flex; justify-content: space-between; align-items: flex-end; margin-top: 0.5rem; }
+        #share-card-watermark { font-size: 0.65rem; color: #9ca3af; width: 70%; line-height: 1.2; }
+        #share-card-qrcode { width: 28%; height: auto; background-color: white; padding: 2px; border: 1px solid #eee; box-shadow: 0 0 3px rgba(0, 0, 0, 0.1); }
         #share-card-qrcode img { display: block; width: 100%; height: 100%; }
     </style>
 </head>
@@ -97,7 +83,6 @@
             <div class="flex flex-col md:flex-row gap-6 md:gap-8 mb-8">
                 <div class="w-full md:w-2/5 flex-shrink-0">
                      <div id="image-gallery-container" class="bg-white rounded-lg shadow-md overflow-hidden">
-                         <!-- **MODIFIED**: Moved pagination inside swiper container -->
                          <div class="swiper-container main-swiper bg-gray-200 relative">
                               <div class="swiper-wrapper" id="main-swiper-wrapper">
                                   <div class="swiper-slide flex items-center justify-center text-gray-400 aspect-[1179/1572]">加载中...</div>
@@ -137,23 +122,17 @@
             </footer>
         </div>
 
+        <!-- **MODIFIED**: Updated Share Card Structure -->
         <div id="share-card-container">
             <div id="share-card-image-wrapper">
                 <img id="share-card-image" src="" alt="Cigar Cover Image" crossorigin="anonymous">
             </div>
             <div id="share-card-content">
-                <!-- **MODIFIED**: Score/Grade Layout -->
                 <div id="share-card-score-grade">
-                     <div id="share-card-score-wrapper">
-                         <span id="share-card-score">0.00</span>
-                         <div id="share-card-grade">
-                            <span id="share-card-grade-badge">? - ???</span>
-                         </div>
-                     </div>
-                     <!-- QR code moved to bottom row -->
+                    <span id="share-card-score">0.00</span>
+                    <span id="share-card-grade-badge">? - ???</span>
                 </div>
-                <!-- **MODIFIED**: Bottom row for watermark and QR -->
-                <div id="share-card-bottom-row">
+                <div class="share-card-footer">
                      <p id="share-card-watermark">
                          <span id="share-card-username">用户</span> 评分于 Pistacho评分系统 www.pista-cho.com
                      </p>
@@ -209,8 +188,7 @@
                  mainSwiper = new Swiper('.main-swiper', {
                      spaceBetween: 10, autoHeight: true,
                      navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev', },
-                     // **MODIFIED**: Point pagination to the specific element
-                     pagination: { el: '#image-gallery-container .swiper-pagination', clickable: true, },
+                     pagination: { el: '.main-swiper .swiper-pagination', clickable: true, }, // Ensure pagination el is specific
                      thumbs: { swiper: thumbnailSwiper, },
                      simulateTouch: true, touchRatio: 1, touchAngle: 45, grabCursor: true,
                  });
@@ -218,8 +196,7 @@
                  thumbContainer.classList.add('hidden');
                  mainSwiper = new Swiper('.main-swiper', {
                       autoHeight: true,
-                      // **MODIFIED**: Point pagination even for single slide
-                      pagination: { el: '#image-gallery-container .swiper-pagination', clickable: true, },
+                      pagination: { el: '.main-swiper .swiper-pagination', clickable: true, }, // Ensure pagination el is specific
                       allowTouchMove: false
                  });
              }
@@ -392,6 +369,7 @@
                 // Set image source and trigger generation
                 if (images.length > 0 && shareCardImage) {
                      shareCardImage.src = `/api/image/${images[0]}`;
+                     // **MODIFIED**: Trigger autoGenerateShareImage only after image load success
                      shareCardImage.onload = () => { autoGenerateShareImage(); };
                      shareCardImage.onerror = () => { console.error("Share card cover image failed to load."); };
                 } else {
@@ -425,4 +403,3 @@
     </script>
 </body>
 </html>
-
